trunk/Archive2/e5/b24b7d954d3438/output
main.cpp: In function 'int main()':
main.cpp:7:7: error: no matching function for call to 'X::X()'
     X x;
       ^
main.cpp:7:7: note: candidate is:
main.cpp:2:5: note: X::X(const X&) <deleted>
     X(X const&) = delete;
     ^
main.cpp:2:5: note:   candidate expects 1 argument, 0 provided
