trunk/Archive2/e5/b24b7d954d3438/main.cpp
struct X {
    X(X const&) = delete;
    X& operator=(X const&) = delete;
};

int main() {
    X x;
}
